# tlauncher-arch

./: .SRCINFO  PKGBUILD  README.md  meson.build  set_window_class.sh  set_wm_class.c  tlauncher  tlauncher.desktop  tlauncher_minecraft.desktop  tlauncher_startup.desktop
